# bert-cplusplus-infer

./: CMakeLists.txt  README.md
include/: base_type.h  bert.h  tokenization.h
src/: CMakeLists.txt  bert.cpp  tokenization.cpp
